Added moment.js and moment.tz and the links to Github and Netlify

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-10-year-range.min.js"></script>
     <title>World Clock - Jessica Kelly</title>
   </head>
   <body>
@@ -11,9 +13,15 @@
   </body>
   <footer>
     This project was coded by
-    <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a> and
-    is open-sourced on <a href="" target="_blank">Github</a> and hosted on
-    <a href="" target="_blank">Netlify</a>
+    <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a> ♥️
+    and is open-sourced on
+    <a href="https://github.com/kessjelly/world-clock" target="_blank"
+      >Github</a
+    >
+    and hosted on
+    <a href="https://project-world-timezones.netlify.app/" target="_blank"
+      >Netlify.</a
+    >
   </footer>
   <script src="src/index.js"></script>
 </html>
