Added basic HTML

--- a/index.html
+++ b/index.html
@@ -9,19 +9,41 @@
     <title>World Clock - Jessica Kelly</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Mexico</option>
+        <option value="">Sydney</option>
+      </select>
+
+      <div class="city">
+        <h2>London 🇬🇧</h2>
+        <div class="date">July 3rd 2025</div>
+        <div class="time">16:57:00 PM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney 🇦🇺</h2>
+        <div class="date">July 3rd 2025</div>
+        <div class="time">16:57:00 PM</div>
+      </div>
+    </div>
+
+    <footer>
+      This project was coded by
+      <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
+      ♥️ and is open-sourced on
+      <a href="https://github.com/kessjelly/world-clock" target="_blank"
+        >Github</a
+      >
+      and hosted on
+      <a href="https://project-world-timezones.netlify.app/" target="_blank"
+        >Netlify</a
+      >.
+    </footer>
   </body>
-  <footer>
-    This project was coded by
-    <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a> ♥️
-    and is open-sourced on
-    <a href="https://github.com/kessjelly/world-clock" target="_blank"
-      >Github</a
-    >
-    and hosted on
-    <a href="https://project-world-timezones.netlify.app/" target="_blank"
-      >Netlify.</a
-    >
-  </footer>
   <script src="src/index.js"></script>
 </html>
