--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="src/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.6.0/moment-timezone-with-data-10-year-range.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>World Clock - Jessica Kelly</title>
   </head>
   <body>
@@ -19,16 +26,12 @@
         <option value="">Mexico</option>
         <option value="">Sydney</option>
       </select>
-
       <div class="city">
-        <h2>London 🇬🇧</h2>
-        <div class="date">July 3rd 2025</div>
-        <div class="time">16:57:00 PM</div>
-      </div>
-      <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">July 3rd 2025</div>
-        <div class="time">16:57:00 PM</div>
+        <div>
+          <h2>Brisbane</h2>
+          <div class="date">Jul 3, 2025</div>
+        </div>
+        <div class="time">16:57:00 <small>PM</small></div>
       </div>
     </div>
 
