Displayed correct time and date with java

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <option value="">Mexico</option>
         <option value="">Sydney</option>
       </select>
-      <div class="city">
+      <div class="city" id="local">
         <div>
           <h2>Brisbane</h2>
-          <div class="date">Jul 3, 2025</div>
+          <div class="date" id="date"></div>
         </div>
-        <div class="time">16:57:00 <small>PM</small></div>
+        <div class="time" id="time"></div>
       </div>
     </div>
 
