--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Atlantic/Madeira">Madeira</option>
       </select>
-      <div id="cities"></div>
-      <div class="city" id="local">
+      <div id="cities">
+      <div class="city" id="brisbane">
         <div>
           <h2>Brisbane</h2>
           <div class="date" id="date"></div>
@@ -35,7 +35,6 @@
         <div class="time" id="time"></div>
       </div>
     </div>
-  </div>
 
     <footer>
       This project was coded by
