--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <option value="Atlantic/Madeira">Madeira</option>
       </select>
       <div id="cities">
-      <div class="city" id="brisbane">
+      <div class="city" id="local">
         <div>
-          <h2>Brisbane</h2>
+          <h2 class="name" id="name"></h2>
           <div class="date" id="date"></div>
         </div>
         <div class="time" id="time"></div>
