Added more cities to select

--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
       <select id="city">
         <option value="">Select a city...</option>
         <option value="Europe/London">London</option>
-        <option value="America/New_York">New York</option>
-        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Europe/Lisbon">Lisbon</option>
         <option value="Atlantic/Madeira">Madeira</option>
+        <option value="Africa/Nairobi">Nairobi</option>
+        <option value="America/New_York">New York</option>
+        <option value="America/Chicago">Chicago</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Asia/Singapore">Singapore</option>
+        <option value="Australia/Brisbane">Brisbane</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
       <div id="cities">
       <div class="city" id="local">
