Added refresh button HTML & CSS

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <div class="time" id="time"></div>
       </div>
     </div>
-
+    
+    <button id="refreshButton">Refresh city</button>
     <footer>
       This project was coded by
       <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
