Add JS for refresh button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     
-    <button id="refreshButton">Refresh city</button>
+    <button id="refresh-button">Remove city</button>
     <footer>
       This project was coded by
       <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
