--- a/index.html
+++ b/index.html
@@ -42,17 +42,13 @@
       </div>
     </div>
     
-    <button id="refresh-button">Remove city</button>
+    <button id="refresh-button">Remove cities</button>
     <footer>
       This project was coded by
       <a href="https://github.com/kessjelly" target="_blank">Jessica Kelly</a>
       ♥️ and is open-sourced on
       <a href="https://github.com/kessjelly/world-clock" target="_blank"
         >Github</a
-      >
-      and hosted on
-      <a href="https://project-world-timezones.netlify.app/" target="_blank"
-        >Netlify</a
       >.
     </footer>
   </body>
